examples/test/testpolicy1605.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1605
  namespace: namespace350
spec:
  podSelector:
    matchLabels:
      key44: value27
      key10: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value31
          key38: value0
          key46: value25
      podSelector:
        matchLabels:
          key42: value6
